# sphinxcontrib-sheeptext

./: .gitignore  mise.toml  pyproject.toml
sphinxcontrib_sheeptext/: sphinxcontrib_sheeptext.py
