[project]
name = "sphinxcontrib-sheeptext"
version = "0.2.0"
description = "Render SheepText diagrams in Sphinx"
authors = [{ name = "Asim Ihsan", email = "asim@ihsan.io" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=9.2.0",
    "Sphinx>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sphinxcontrib_sheeptext"]
